--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "socket.io": "^4.7.5",
     "stripe": "^19.3.0"
   },
