Complete MVP with CalendarSlotEntry migration, Stripe hardening, Cypress E2E, and UI polish

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,23 @@
-﻿PORT=5000
+﻿# Example environment variables for backend
+# Copy this to `backend/.env` and fill real values (do NOT commit real secrets)
+
+PORT=5000
+BASE_CLIENT_URL=http://localhost:5173
+BODY_LIMIT=10mb
+
+MONGODB_URI=mongodb://127.0.0.1:27017/maison_douce
+
+JWT_SECRET=change_me_local
+JWT_EXPIRES=7d
+
+STRIPE_SECRET=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_CURRENCY=usd
+
+# BASE_SERVER_URL is useful when backend needs to call itself (e.g. rezervare -> calendar patch)
+BASE_SERVER_URL=http://localhost:5000
+PORT=5000
 BASE_CLIENT_URL=http://localhost:5173
 
 # Alege UNA dintre baze și păstreaz-o peste tot
