--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.0",
+    "cypress": "^12.17.4",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.1",
     "vite": "^5.4.20"
