--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,9 +37,10 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.0",
-    "cypress": "^12.17.4",
+    "baseline-browser-mapping": "^2.9.14",
+    "cypress": "^14.5.4",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.4.20"
+    "vite": "^6.4.1"
   }
 }
