--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "checklist": "node ../scripts/checklist.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
