backend: add push, ai, stripe confirm, rbac

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,32 +1,37 @@
-﻿# Example environment variables for backend
+# Example environment variables for backend
 # Copy this to `backend/.env` and fill real values (do NOT commit real secrets)
 
 PORT=5000
 BASE_CLIENT_URL=http://localhost:5173
+BASE_SERVER_URL=http://localhost:5000
 BODY_LIMIT=10mb
 
-MONGODB_URI=mongodb://127.0.0.1:27017/maison_douce
+# MONGODB
+MONGODB_URI=mongodb://127.0.0.1:27017/torturi
 
+# JWT
 JWT_SECRET=change_me_local
 JWT_EXPIRES=7d
 
-STRIPE_SECRET=
-STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
-STRIPE_CURRENCY=usd
-
-# BASE_SERVER_URL is useful when backend needs to call itself (e.g. rezervare -> calendar patch)
-BASE_SERVER_URL=http://localhost:5000
-PORT=5000
-BASE_CLIENT_URL=http://localhost:5173
-
-# Alege UNA dintre baze și păstreaz-o peste tot
-# MONGODB_URI=mongodb://127.0.0.1:27017/maison_douce
-MONGODB_URI=mongodb://127.0.0.1:27017/torturi
-
-JWT_SECRET=CHANGE_ME_IN_LOCAL_ENV
-
+# Stripe
 STRIPE_SECRET_KEY=sk_test_xxx
 STRIPE_WEBHOOK_SECRET=whsec_xxx
+STRIPE_CURRENCY=mdl
 
-BODY_LIMIT=10mb
+# SMTP (email)
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=Maison-Douce <no-reply@localhost>
+
+# Web Push (VAPID)
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
+VAPID_SUBJECT=mailto:contact@localhost
+
+# AI
+OPENAI_API_KEY=
+OPENAI_IMAGE_MODEL=gpt-image-1
+AI_IMAGE_SIZE=1024x1024
