--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "checklist": "node ../scripts/checklist.js"
+    "checklist": "node ../scripts/checklist.js",
+    "vapid": "node scripts/generate-vapid.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -26,7 +27,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "socket.io": "^4.7.5",
-    "stripe": "^19.3.0"
+    "stripe": "^19.3.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
