feat: enable fallback payments, notifications and admin contact inbox

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 
 # Dependencies
 node_modules/
+
+# Build artifacts and local runtime files
+frontend/dist/
+backend/.generated-vapid.json
+backend/uploads/mail-outbox/
